[package]
name = "monitor"
version = "0.0.0-beta"
description = "Monitor lets you easily manage the brightness levels of multiple monitors."
authors = ["Gromo"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
wmi = "0.13"
widestring="1"
once_cell = "1.19.0"

[dependencies.windows]
version = "0.56.0"
features = [
    "Win32_Devices_Display",
    "Win32_Graphics_Gdi",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
